--- a/keston-antonio-schmidtgen-personal-website/public/index.html
+++ b/keston-antonio-schmidtgen-personal-website/public/index.html
@@ -25,6 +25,8 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Keston Antonio Schmidtgen</title>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/tailwindcss/2.0.2/tailwind.min.css">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
