--- a/keston-antonio-schmidtgen-personal-website/public/index.html
+++ b/keston-antonio-schmidtgen-personal-website/public/index.html
@@ -41,5 +41,8 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+   <!-- AlpineJS Library -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/alpinejs/2.8.0/alpine.js"></script>
+
   </body>
 </html>
